test/should_pass/reuse_005.grg
actions reuse_005;

rule r {
	pattern {
		x: Node;
		y: Node;
		x-e:Edge->y;
	}
	replace {
		x; y;
		- e ->;
	}
}


