test/should_fail/dangle_004.grg
actions dangle_004;

rule r {
	pattern {
		x: Node;
		y: Node;
		x -e:Edge-> y;
	}
	replace{
		-e->y;
	}
}
